--- a/employee-management-system/src/main/resources/application.properties
+++ b/employee-management-system/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=employee-management-system
-server.port=8080
+server.port=8081
 
 # URL JDBC pour Oracle Database
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521/XEPDB1
@@ -16,6 +16,5 @@ spring.jpa.hibernate.ddl-auto=update
 
 
 springdoc.api-docs.enabled=true
-springdoc.swager-ui.enabled=true
-
+springdoc.swagger-ui.enabled=true
 
